--- a/ejempl3.html
+++ b/ejempl3.html
@@ -12,7 +12,7 @@
     <li>Push &  Pull</li>
     <li>Clonacion de repositorios </li>
 </p>
-<!-- Agregamos parrafos aquí abajo-->
+Un sistema (del latín systēma, y este del griego σύστημα sýstēma 'reunión, conjunto, agregado') es "un objeto complejo cuyas partes o componentes se relacionan con al menos alguno de los demás componentes";​ ya sea conceptual o material.
 
 <p>            </p>
 <p>           </p>
