--- a/ejempl3.html
+++ b/ejempl3.html
@@ -14,7 +14,7 @@
 </p>
 Un sistema (del latín systēma, y este del griego σύστημα sýstēma 'reunión, conjunto, agregado') es "un objeto complejo cuyas partes o componentes se relacionan con al menos alguno de los demás componentes";​ ya sea conceptual o material.
 
-<p>            </p>
+<p>Para organizar y estructurar un conjunto de elementos interrelacionándolos entre sí, controlando su funcionamiento y manteniendo un orden en los procesos.            </p>
 <p>           </p>
 
 
