--- a/ejempl3.html
+++ b/ejempl3.html
@@ -15,7 +15,7 @@
 Un sistema (del latín systēma, y este del griego σύστημα sýstēma 'reunión, conjunto, agregado') es "un objeto complejo cuyas partes o componentes se relacionan con al menos alguno de los demás componentes";​ ya sea conceptual o material.
 
 <p>Para organizar y estructurar un conjunto de elementos interrelacionándolos entre sí, controlando su funcionamiento y manteniendo un orden en los procesos.            </p>
-<p>           </p>
+<p> Se tienen los sistemas abstractos, que son los que se conforman de ideas y simbologías; y los físicos o concretos, que se constituyen por todo aquello que pueda tocarse.          </p>
 
 
 
